@@ -1,5 +1,6 @@
 2011-02-24  Xavier Perseguers  <xavier@causal.ch>
 
+	* Fixed blank page when activating debug in TYPO3 4.4
 	* Changed link position for form documents/legal regulation items
 	* Slightly restructured documentation, started Tutorial chapter
 
